# FinMCP

./: .env.example  .gitignore  README.md  README.zh_CN.md  main.py  pyproject.toml
finmcp/: __init__.py  __main__.py  ping_client.py  utils.py
finmcp/agent_tools/: README.md  README.zh_CN.md  __init__.py  __main__.py  tool_alphavantage_news.py  tool_fin_history.py  tool_fin_news.py  tool_jina_search.py
finmcp/data_sources/: __init__.py
finmcp/data_sources/fin_history/: README.md  README.zh_CN.md  __init__.py  base.py  investing_com.py  nanhua.py  tushare.py  yfinance.py
finmcp/data_sources/fin_news/: __init__.py  base.py  eastmoney.py
finmcp/data_sources/fin_report/: base.py  eastmoney.py
finmcp/databases/: __init__.py  base.py  common_db.py  history_db.py  utils.py
fintools/: __init__.py  utils.py
fintools/agent_tools/: README.md  README.zh_CN.md  __init__.py  tool_fin_history.py  tool_fin_news.py  tool_jina_search.py
fintools/api/F/: README.md  README.zh_CN.md  fin_history.py  fin_news.py  fin_report.py  types.py  utils.py
fintools/api/mcp/: README.md  README.zh_CN.md  __init__.py  tool_alphavantage_news.py  tool_fin_history.py
fintools/data/: 2019南华商品指数及分类指数权重.xlsx  2020权重发布.xlsx  2021权重发布.xlsx  2022权重发布.xlsx  known_indices.csv  南华商品指数2023年权重调整公告.xlsx  南华商品指数2024年权重调整公告.xlsx  南华商品指数2025年权重调整公告.xlsx
fintools/data_sources/: __init__.py
fintools/data_sources/fin_history/: README.md  README.zh_CN.md  __init__.py  base.py  choice.py  efinance.py  investing_com.py  nanhua.py  tushare.py  yfinance.py
fintools/data_sources/fin_news/: __init__.py  eastmoney.py
fintools/data_sources/fin_report/: __init__.py  eastmoney.py
fintools/databases/: __init__.py  base.py  common_db.py  history_db.py  utils.py
fintools/utils/: graph.py  types.py  underlying.py
tests/: test_F_api.py  test_database.py  test_fin_history.py  test_news.py  test_parse_datetime.py  test_report.py
