[project]
name = "finmcp"
version = "0.2.0"
description = "A financial data agent toolset for MCP"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "blinker<1.8.0",
    "brotli>=1.2.0",
    "dotenv>=0.9.9",
    "efinance>=0.5.5.2",
    "fastmcp>=2.13.3",
    "langchain-mcp-adapters>=0.2.1",
    "lxml>=6.0.2",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "selenium-wire>=5.1.0",
    "setuptools>=80.9.0",
    "tushare>=1.4.24",
    "tzlocal>=5.3.1",
    "yfinance>=0.2.66",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
finmcp = ["data/**/*"]

[project.entry-points.'finmcp.services']

[dependency-groups]
dev = [
    "finmcp",
    "ipython>=8.37.0",
    "langchain>=1.1.3",
    "langchain-openai>=1.1.1",
]

[tool.uv.workspace]
members = [
    ".",
]

[tool.uv.sources]
finmcp = { workspace = true, editable = true }
