[project]
name = "fintools"
version = "1.2.5"
description = "A financial data toolset"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dotenv>=0.9.9",
    "efinance>=0.5.5.2",
    "fastmcp>=2.13.3",
    "langchain-mcp-adapters>=0.2.1",
    "lxml>=6.0.2",
    "numpy>=2.2.6",
    "openai>=2.9.0",
    "pandas>=2.3.3",
    "playwright>=1.57.0",
    "pyparsing>=3.3.1",
    "setuptools>=80.9.0",
    "stockstats>=0.6.5",
    "tushare>=1.4.24",
    "tzlocal>=5.3.1",
    "wrapt>=2.0.1",
    "yfinance>=0.2.66",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
fintools = ["data/**/*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-q"

[tool.uv.workspace]
members = [
    ".",
]

[tool.uv.sources]
fintools = { workspace = true, editable = true }

[project.entry-points.'fintools.mcp_services']

[dependency-groups]
dev = [
    "fintools",
    "ipython>=8.37.0",
    "langchain>=1.1.3",
    "langchain-openai>=1.1.1",
    "pytest>=9.0.2",
    "pytest-pythonpath>=0.7.3",
    "pytest-xdist>=3.8.0",
]

